090_lls/grade.txt
Grading at 11/02/2018:01:59:30.317936
For commit ID 9f4615e97e905b5ed6b0ca7cabe4b5728a3b9e2e
-----------------------------------------------
testcase 1 : Testing with LinkedList<int>
...compiling...
In file included from tester.cpp:1:0:
ll.h: In instantiation of ‘LinkedList<T>& LinkedList<T>::operator=(const LinkedList<T>&) [with T = int]’:
tester.cpp:94:11:   required from here
ll.h:56:21: error: base operand of ‘->’ has non-pointer type ‘const LinkedList<int>’
     for (Node * p = rhs->head; p != NULL; p = p->next) {
                     ^~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 2 : Testing with LinkedList<std::string>
...compiling...
In file included from tester.cpp:1:0:
ll.h: In instantiation of ‘LinkedList<T>& LinkedList<T>::operator=(const LinkedList<T>&) [with T = std::__cxx11::basic_string<char>]’:
tester.cpp:94:11:   required from here
ll.h:56:21: error: base operand of ‘->’ has non-pointer type ‘const LinkedList<std::__cxx11::basic_string<char> >’
     for (Node * p = rhs->head; p != NULL; p = p->next) {
                     ^~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 3 : Testing with LinkedList<(a custom class we wrote)>
...compiling...
In file included from tester.cpp:1:0:
ll.h: In instantiation of ‘LinkedList<T>& LinkedList<T>::operator=(const LinkedList<T>&) [with T = Tester]’:
tester.cpp:94:11:   required from here
ll.h:56:21: error: base operand of ‘->’ has non-pointer type ‘const LinkedList<Tester>’
     for (Node * p = rhs->head; p != NULL; p = p->next) {
                     ^~~
The code did not compile.  This test failed.

Overall Grade: F
